[gd_scene load_steps=11 format=3 uid="uid://baub4pvh8yhvi"]

[ext_resource type="Script" path="res://intro_scene.gd" id="1_cyd12"]
[ext_resource type="PackedScene" uid="uid://14qsigm4ehuk" path="res://scenes/terrain/terrain.tscn" id="2_ys1n8"]
[ext_resource type="PackedScene" uid="uid://cnkwewfuwl37d" path="res://assets/models/Shark.blend" id="4_rjcxk"]
[ext_resource type="PackedScene" uid="uid://bklpqsoc7k6fw" path="res://assets/models/Eggs.blend" id="5_s2teq"]
[ext_resource type="FontFile" uid="uid://c8tli8g8cmjjk" path="res://assets/fonts/BABYK___.TTF" id="6_5q1r4"]
[ext_resource type="FontFile" uid="uid://djdpk7o8qwjdw" path="res://assets/fonts/storm_gust/Storm Gust.ttf" id="7_0xxvj"]

[sub_resource type="LabelSettings" id="LabelSettings_xagq5"]
font = ExtResource("6_5q1r4")
font_size = 53
font_color = Color(9.02452e-09, 0.0941875, 0.094879, 1)
outline_size = 16
shadow_size = 4
shadow_color = Color(0.0885599, 0.0885599, 0.0885599, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gnlrb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uf0fc"]
bg_color = Color(0.827451, 0.827451, 0.827451, 0.666667)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 16

[sub_resource type="Theme" id="Theme_fmht2"]
Button/colors/font_color = Color(0, 0.0941176, 0.0941176, 1)
Button/colors/font_focus_color = Color(0, 0.0941176, 0.0941176, 1)
Button/colors/font_hover_color = Color(0, 0.25, 0.3, 1)
Button/colors/font_outline_color = Color(0.992157, 0.992157, 0.992157, 1)
Button/colors/font_pressed_color = Color(0, 0.0941176, 0.0941176, 1)
Button/constants/outline_size = 8
Button/font_sizes/font_size = 100
Button/fonts/font = ExtResource("7_0xxvj")
Button/styles/disabled = SubResource("StyleBoxEmpty_gnlrb")
Button/styles/hover = SubResource("StyleBoxFlat_uf0fc")
Button/styles/normal = SubResource("StyleBoxFlat_uf0fc")
Button/styles/pressed = SubResource("StyleBoxFlat_uf0fc")

[node name="IntroScene" type="Node3D"]
script = ExtResource("1_cyd12")

[node name="Terrain" parent="." instance=ExtResource("2_ys1n8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.302275, 1.19209e-07, -0.296529)

[node name="Shark" parent="." instance=ExtResource("4_rjcxk")]
transform = Transform3D(2.24, 0, 0, 0, 1.78817, -1.3491, 0, 1.3491, 1.78817, 41.2748, 5.17472, -18.9119)

[node name="Eggs" parent="." instance=ExtResource("5_s2teq")]
transform = Transform3D(3.255, 0, 0, 0, 3.255, 0, 0, 0, 3.255, 40.3396, 2.53844, -13.948)

[node name="Shark2" parent="." instance=ExtResource("4_rjcxk")]
transform = Transform3D(-0.816627, 1.25817, 1.5123, 0, 1.63742, -1.36226, -1.96724, -0.522282, -0.627775, 35.7098, 5.54924, -7.65731)

[node name="Shark3" parent="." instance=ExtResource("4_rjcxk")]
transform = Transform3D(-0.291651, -1.12047, -1.96415, -0.164572, 1.98568, -1.10832, 2.25527, 6.79493e-08, -0.33488, 50.1034, 5.46017, -10.2104)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-3.89492e-08, 0.453897, -0.891054, 1.98405e-08, 0.891054, 0.453897, 1, 0, -4.37114e-08, 33.2336, 9.55402, -10.707)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
offset_left = 5.0
offset_top = -3.0
offset_right = 1335.0
offset_bottom = 220.0
text = "Oh No the Sharks are attacking the
puffer eggs! They are on the brink of 
destruction!
"
label_settings = SubResource("LabelSettings_xagq5")

[node name="Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -211.0
offset_right = 621.0
offset_bottom = -64.0
grow_vertical = 0
mouse_default_cursor_shape = 2
theme = SubResource("Theme_fmht2")
text = "Stop them"

[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
